// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header.js should render after the film was clicked 1`] = `
<div>
  <Connect(FilmHeader) />
</div>
`;

exports[`Header.js should render if the film was not clicked 1`] = `
<div>
  <SearchHeader />
</div>
`;
